tiny spacing fix

--- a/src/app/team/team.component.scss
+++ b/src/app/team/team.component.scss
@@ -7,7 +7,7 @@ div.bl-team {
   height: 2.25em;
   padding: 0.25em 0.5em;
   vertical-align: middle;
-  margin: 0 0.5em 0.5em 0.5em;
+  margin: 0 0.5em 0.25em 0.5em;
 }
 
 .bl-team-name {
